[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/MoveLevelTrigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 616, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 336, 8 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 720 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 1280, 0 )

[node name="MoveLevelTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="MoveUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveUp"]
position = Vector2( 640, 8 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="MoveDown" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDown"]
position = Vector2( 640, 712 )
scale = Vector2( 1, -1 )
shape = SubResource( 1 )
one_way_collision = true
__meta__ = {
"_edit_group_": true
}

[node name="MoveLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveLeft"]
position = Vector2( 8, 360 )
rotation = 4.71239
shape = SubResource( 2 )
one_way_collision = true
__meta__ = {
"_edit_group_": true
}

[node name="MoveRight" type="Area2D" parent="."]
position = Vector2( 1264, 0 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveRight"]
position = Vector2( 8, 360 )
rotation = 1.5708
shape = SubResource( 2 )
one_way_collision = true
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1280, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2DTop" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="CollisionShape2DBottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 720 )
shape = SubResource( 4 )
[connection signal="body_entered" from="MoveUp" to="." method="_on_MoveUp_body_entered"]
[connection signal="body_entered" from="MoveDown" to="." method="_on_MoveDown_body_entered"]
[connection signal="body_entered" from="MoveLeft" to="." method="_on_MoveLeft_body_entered"]
[connection signal="body_entered" from="MoveRight" to="." method="_on_MoveRight_body_entered"]
